# VX-ToolChains

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL_SCRIPTS.md  README.md  all_features.vx  build.zig  dev  dev.vx  fib190.vack  hello.vx  nt-install-vxtoolkit.bat  ret0.vx  ru.cc  test_debugger.rs  test_native_compilation.sh  unix-unixlike-install-vxtoolkit.bash  vxcompiler  vxedit.vx  vxmod.toml  vxmodel  vxset.toml语法模板.toml  vxsetting.toml
.gitee/workflows/: ci.yml  release.yml
.trae/documents/: p0_fix_parser_match_arm_block.md  p0_match_generics_compile_error_plan.md
bootstrap/: README.md  ast.vx  codegen.vx  compiler.vx  lexer.vx  parser.vx  token.vx  vxsetting.toml
bootstrap/tests/: vxsetting.toml
ci/: check.sh
docs/: macros.md  macros_quickstart.md  vxlinker_rust.md
editors/vscode/: .gitignore  README.md  language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: vx.tmLanguage.json
examples/: macro_demo.vx
package/browser_detect/: browser_detect.py
package/fib190/: fib190.ts  info.toml
src/: aot_backend.rs  builder.rs  builder.zig  builtin_linker.rs  bytecode.rs  bytecode.zig  cache.rs  cache.zig  compiler_bytecode.rs  compiler_bytecode.zig  compiler_core.rs  compiler_expr.rs  compiler_module.rs  compiler_opcode.rs  compiler_ownership.rs  compiler_stmt.rs  compiler_typeir.rs  decompiler.rs  delinker.rs  instruction.rs  ipt.rs  lib.rs  lib.zig  linker.zig  lld_linker.rs  logger.zig  lsp_main.zig  macros.rs  macros.zig  main.rs  memory_safety.rs  opcode.rs  opcode.zig  parallel_build.zig  parser.rs  pm.rs  target_profile.rs  token.rs  token.zig  type_ir.rs  (+14 more)
src-zig/: build.zig
src-zig/src/: bytecode.zig  compiler_bytecode.zig  delinker.zig  lib.zig  lsp_main.zig  macros.zig  stubs.zig  target_profile.zig  vlnk.zig  vxc.zig  vxde.zig  vxsetting.zig
src-zig/src/compiler/: core.zig  expr.zig  module.zig  monomorph.zig  stmt.zig  typeir.zig
src-zig/src/parser/: ast.zig
src/builtin_linker/: elf.rs
src/compiler/: core.zig  expr.zig  module.zig  monomorph.zig  optimize.zig  optimize_test.zig  ownership.zig  stmt.zig  typeir.zig
src/debugger/: main.rs
src/lsp/: backend.rs  backend.zig  completion.rs  completion.zig  diagnostics.rs  diagnostics.zig  goto.rs  goto.zig  hover.rs  hover.zig  inlay_hints.zig  main.rs  state.rs  state.zig  symbols.rs  symbols.zig
src/parser/: ast.rs  ast.zig  expr.rs  mod.rs  mod.zig  stmt.rs  tests.rs
std/: README.md  bytes.vx  char.vx  conv.vx  error.vx  io.vx  iter.vx  macros.vx  mod.vx  option.vx  prelude.vx  sys.vx
std/collections/: hashmap.vx  linked_list.vx  mod.vx  set.vx  vec.vx
std/io/: dir.vx  file.vx  mod.vx  path.vx  stream.vx
std/math/: math.vx  mod.vx  random.vx
std/reflect/: mod.vx
std/string/: codec.vx  iter.vx  mod.vx  pattern.vx  util.vx
std/sys/: coroutine.vx  datetime.vx  duration.vx  env.vx  mod.vx  sync.vx  time.vx
std/tests/: run_all.vx  smoke.vx  vxsetting.toml
tests/: integration_test.rs  verify_all_features.rs
tests/fixtures/: all_features.vx  assign_struct.vx  basic_arithmetic.vx  boolean_logic.vx  control_flow.vx  fibonacci.vx  minimal_struct.vx  ou.vx  simple_struct.vx  simple_test.vx  string_ops.vx  struct_test.vx  vxsetting.toml
vlnk_tmp/: build.zig
vlnk_tmp/src/: codebuf.zig  codegen.zig  codegen_aarch64.zig  codegen_arm32.zig  codegen_riscv.zig  codegen_x86_64.zig  elf_linker.zig  linker.zig  macho_linker.zig  main.zig  pe_linker.zig  platform_io.zig  typeir.zig  vxobj.zig
