[package]
name = "vx_language_compiler"
version = "1.3.4"
edition = "2021"
authors = ["VX Language Team"]
description = "A complete toolchain for the adVanced eXecutable (VX) programming language: compiler, linker, VM runtime, package manager, LSP server, and debugger"
license = "AGPL-3.0"


[[bin]]
name = "vxcompiler"
path = "src/ipt.rs"

[[bin]]
name = "vxlinker"
path = "src/vxlinker.rs"

[[bin]]
name = "vx_runtime"
path = "src/main.rs"

[[bin]]
name = "vpm"
path = "src/pm.rs"

[[bin]]
name = "vx-lsp"
path = "src/lsp/main.rs"

[[bin]]
name = "vxdbg"
path = "src/debugger/main.rs"

[lib]
name = "vx_vm"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
tower-lsp = "0.20"
lsp-types = "0.95"
tokio = { version = "1", features = ["full", "io-util"] }
dashmap = "5"
target-lexicon = "0.12"

# VXOBJ v3 section compression
lz4_flex = "0.11"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# ========== Cranelift Code-Gen Backend ==========
# Feature-gated: enable via `cargo build --features aot`
# Required for: vxlinker --mode aot (native machine code)
#
# 目标平台要求:
#   - cranelift-native: 自动检测宿主 CPU (x86_64 / aarch64)
#   - cranelift-codegen "all-arch": 支持交叉编译到其他架构
#   - cranelift-object: 生成 ELF/Mach-O/PE 对象文件
#
# 兼容性限制:
#   - AOT 模式需要 Rust nightly 工具链自动向量化时可使用
#   - 交叉编译需要目标平台的 cranelift ISA 支持
#   - 32 位目标 (i686, armv7) 理论上支持但未测试
#
cranelift-codegen = { version = "0.110", optional = true, features = ["all-arch"] }
cranelift-frontend = { version = "0.110", optional = true }
cranelift-module = { version = "0.110", optional = true }
cranelift-object = { version = "0.110", optional = true }
cranelift-native = { version = "0.110", optional = true }

[features]
default = []
# AOT: compile VXOBJ TypeIR to native machine code via Cranelift
aot = ["cranelift-codegen", "cranelift-frontend", "cranelift-module", "cranelift-object", "cranelift-native"]
# JIT: runtime compilation (reserved for future use)
jit = []

[dev-dependencies]
tempfile = "3.0"

[profile.dev]
opt-level = 0

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
