[package]
name = "vx_language_toolkit"
version = "1.4.0-beta"
edition = "2021"
authors = ["VX Language Team"]
description = "A complete toolchain for the adVanced eXecutable (VX) programming language: compiler, native linker, package manager, LSP server"
license = "AGPL-3.0"


[[bin]]
name = "vxc"
path = "src/ipt.rs"

[[bin]]
name = "vlnk"
path = "src/vxlinker.rs"

[[bin]]
name = "vpm"
path = "src/pm.rs"

[[bin]]
name = "vx-lsp"
path = "src/lsp/main.rs"

[[bin]]
name = "vxde"
path = "src/vxdecompiler.rs"

[[bin]]
name = "vdlnk"
path = "src/vxdelinker.rs"

[lib]
name = "vx_vm"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
tower-lsp = "0.20"
lsp-types = "0.95"
tokio = { version = "1", features = ["full", "io-util"] }
dashmap = "5"
target-lexicon = "0.12"
which = "6"

serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# ========== Cranelift Code-Gen Backend ==========
# Feature-gated: enable via `cargo build --features aot`
# Required for: vxlinker native compilation (machine code)
#
# 目标平台要求:
#   - cranelift-native: 自动检测宿主 CPU (x86_64 / aarch64)
#   - cranelift-codegen "all-arch": 支持交叉编译到其他架构
#   - cranelift-object: 生成 ELF/Mach-O/PE 对象文件
#
# 兼容性限制:
#   - 交叉编译需要目标平台的 cranelift ISA 支持
#   - 32 位目标 (i686, armv7) 理论上支持但未测试
#
cranelift-codegen = { version = "0.110", optional = true, features = ["all-arch"] }
object = { version = "0.36", features = ["read", "write", "elf", "macho", "pe"] }
cranelift-frontend = { version = "0.110", optional = true }
cranelift-module = { version = "0.110", optional = true }
cranelift-object = { version = "0.110", optional = true }
cranelift-native = { version = "0.110", optional = true }

[features]
default = []
# AOT: compile VXOBJ v4 TypeIR to native machine code via Cranelift
aot = ["cranelift-codegen", "cranelift-frontend", "cranelift-module", "cranelift-object", "cranelift-native"]

[dev-dependencies]
tempfile = "3.0"

[profile.dev]
opt-level = 0

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
