[package]
name = "vx_language_toolkit"
version = "1.6.0"
edition = "2021"
authors = ["VX Language Team"]
description = "A complete toolchain for the adVanced eXecutable (VX) programming language: compiler, native linker, package manager, LSP server"
license = "AGPL-3.0"

[[bin]]
name = "vxc"
path = "src/ipt.rs"

[[bin]]
name = "vlnk"
path = "src/vxlinker.rs"

[[bin]]
name = "vpm"
path = "src/pm.rs"

[[bin]]
name = "vxde"
path = "src/vxdecompiler.rs"

[[bin]]
name = "vdlnk"
path = "src/vxdelinker.rs"

[lib]
name = "vx_vm"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
target-lexicon = "0.12"
which = "6"

serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[features]
default = []

[dev-dependencies]
tempfile = "3.0"

[profile.dev]
opt-level = 0

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
